[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Interactibles/FloorButton.gd" type="Script" id=1]
[ext_resource path="res://prototype-graphics/FloorButtonOff.tres" type="Material" id=2]

[sub_resource type="CylinderMesh" id=1]
height = 0.2

[sub_resource type="CylinderMesh" id=2]
top_radius = 0.9
bottom_radius = 0.9
height = 0.2

[sub_resource type="CylinderShape" id=4]
height = 0.3

[sub_resource type="CylinderShape" id=5]
radius = 0.9

[node name="FloorButton" type="Spatial"]
script = ExtResource( 1 )

[node name="GFX" type="StaticBody" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="GFX"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="GFX"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.193927, 0 )
mesh = SubResource( 2 )
skeleton = NodePath("../..")
material/0 = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="GFX"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0 )
shape = SubResource( 4 )

[node name="Area" type="Area" parent="."]
collision_layer = 2
input_ray_pickable = false
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.334, 0 )
shape = SubResource( 5 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
